[project]
name="streamlit-jupyter"
version = "0.3.1"
description = "Simple Python package to preview and develop streamlit apps in jupyter notebooks"
readme = "README.md"
requires-python=">=3.10"
dependencies = [
    "fastcore",
    "ipywidgets>=8.0.0,<9.0.0",
    "jupyter",
    "stqdm",
    "streamlit>=1.19",
    "tabulate",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "ipykernel",
    "mypy",
    "nbdev",
    "plotly>=5.0.0",
    "pre-commit",
    "packaging~=20.0",
    "build",
    "twine",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "ipykernel",
    "mypy",
    "nbdev",
    "plotly>=5.0.0",
    "pre-commit",
    "packaging~=20.0",
    "build",
    "twine",
]

[tool.uv.workspace]
members = [
    ".",
]
